--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
+    //implementation "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
 
 }
