--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
+import com.google.protobuf.gradle.*
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.dokka' version '1.9.10'
+    id 'com.google.protobuf' version '0.9.4'
 }
 
 android {
@@ -45,6 +48,20 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    sourceSets {
+        main {
+            java {
+                srcDirs += 'build/generated/source/proto/main/java'
+            }
+            kotlin {
+                srcDirs += 'build/generated/source/proto/main/kotlin'
+            }
+            proto {
+                srcDir 'src/main/proto' // default value
+            }
+        }
+    }
+
 }
 
 dependencies {
@@ -63,5 +80,51 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:1.9.3'
+    implementation 'com.google.protobuf:protobuf-javalite:3.25.2'
+    implementation 'com.google.protobuf:protobuf-kotlin-lite:3.25.2'
+    if (JavaVersion.current().isJava9Compatible()) {
+        // Workaround for @javax.annotation.Generated
+        // see: https://github.com/grpc/grpc-java/issues/3633
+        implementation("javax.annotation:javax.annotation-api:1.3.1")
+    }
+}
 
+
+
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:${rootProject.ext["protobufVersion"]}"
+    }
+    plugins {
+        java {
+            artifact = "io.grpc:protoc-gen-grpc-java:${rootProject.ext["grpcVersion"]}"
+        }
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${rootProject.ext["grpcVersion"]}"
+        }
+        grpckt {
+            artifact = "io.grpc:protoc-gen-grpc-kotlin:${rootProject.ext["grpcKotlinVersion"]}:jdk8@jar"
+        }
+    }
+    generateProtoTasks {
+        all().forEach {
+            it.plugins {
+                java {
+                    option("lite")
+                }
+                grpc {
+                    option("lite")
+                }
+                grpckt {
+                    option("lite")
+                }
+            }
+            it.builtins {
+                kotlin {
+                    option("lite")
+                }
+            }
+        }
+    }
 }
