--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     }
     implementation 'io.github.raamcosta.compose-destinations:core:1.10.0'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.10.0'
+    implementation 'com.github.kaleidot725:text-editor-compose:0.5.1'
 }
 
 
