--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.22' apply false
     id 'com.google.protobuf' version '0.9.4' apply false
+    id 'org.jetbrains.dokka' version '1.9.10'
 }
 
 ext["grpcVersion"] = "1.47.0"
