--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,3 +26,5 @@ jobs:
       run: ./gradlew generateDebugProto generateReleaseProto
     - name: Build with Gradle
       run: ./gradlew build
+    - name: APK
+      run: ./gradlew assambleRelease
