--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
     - name: APK
-      run: ./gradlew assambleRelease
+      run: ./gradlew assembleRelease
